--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "oled-minimal",
   "displayName": "OLED Minimal",
   "description": "A minimal theme designed for OLED screens",
-  "version": "0.0.1",
+  "version": "1.0.2",
   "publisher": "d4-n1",
   "engines": {
     "vscode": "^1.91.0"
@@ -15,7 +15,7 @@
       {
         "label": "OLED Minimal",
         "uiTheme": "vs-dark",
-        "path": "./themes/OLED Minimal-color-theme.json"
+        "path": "./themes/oled-minimal.json"
       }
     ]
   }
